--- a/itcast-microservice-eureka2/pom.xml
+++ b/itcast-microservice-eureka2/pom.xml
@@ -47,6 +47,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.15</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 
