--- a/itcast-microservice-eureka/src/main/resources/application.yml
+++ b/itcast-microservice-eureka/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8080
 
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     register-with-eureka: true
     fetch-registry: true
@@ -14,3 +16,6 @@ security:
     name: zhw
     password: 123456
 
+spring:
+  application:
+    name: eureka
