--- a/itcast-microservice-eureka2/src/main/resources/application.yml
+++ b/itcast-microservice-eureka2/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8081
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     register-with-eureka: true
     fetch-registry: true
@@ -13,3 +15,6 @@ security:
     name: zhw
     password: 123456
 
+spring:
+  application:
+    name: eureka
