--- a/itcast-microservice-eureka3/src/main/resources/application.yml
+++ b/itcast-microservice-eureka3/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8082
 eureka:
+  instance:
+    hostname: eureka2
+    prefer-ip-address: true
   client:
     register-with-eureka: true
     fetch-registry: true
@@ -12,4 +15,6 @@ security:
   user:
     name: zhw
     password: 123456
-
+spring:
+  application:
+    name: eureka
